deployer-backend3/cdk.out/MyEKSCluster.template.json
{
 "Resources": {
  "EKSVpcBAB3E5CC": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/Resource"
   }
  },
  "EKSVpcPublicSubnet1Subnet6F739FCA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet1/Subnet"
   }
  },
  "EKSVpcPublicSubnet1RouteTable258B7E17": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet1/RouteTable"
   }
  },
  "EKSVpcPublicSubnet1RouteTableAssociationC3AB9ADD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EKSVpcPublicSubnet1RouteTable258B7E17"
    },
    "SubnetId": {
     "Ref": "EKSVpcPublicSubnet1Subnet6F739FCA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "EKSVpcPublicSubnet1DefaultRouteF13B673C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EKSVpcIGW6C6D33F8"
    },
    "RouteTableId": {
     "Ref": "EKSVpcPublicSubnet1RouteTable258B7E17"
    }
   },
   "DependsOn": [
    "EKSVpcVPCGW60CB8A7B"
   ],
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "EKSVpcPublicSubnet1EIPA7436DE4": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet1/EIP"
   }
  },
  "EKSVpcPublicSubnet1NATGatewayE8A16310": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "EKSVpcPublicSubnet1EIPA7436DE4",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "EKSVpcPublicSubnet1Subnet6F739FCA"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "EKSVpcPublicSubnet1DefaultRouteF13B673C",
    "EKSVpcPublicSubnet1RouteTableAssociationC3AB9ADD"
   ],
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet1/NATGateway"
   }
  },
  "EKSVpcPublicSubnet2Subnet22F974C4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet2/Subnet"
   }
  },
  "EKSVpcPublicSubnet2RouteTable0AB21A14": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet2/RouteTable"
   }
  },
  "EKSVpcPublicSubnet2RouteTableAssociation56EB44CD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EKSVpcPublicSubnet2RouteTable0AB21A14"
    },
    "SubnetId": {
     "Ref": "EKSVpcPublicSubnet2Subnet22F974C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "EKSVpcPublicSubnet2DefaultRoute6E6CA646": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EKSVpcIGW6C6D33F8"
    },
    "RouteTableId": {
     "Ref": "EKSVpcPublicSubnet2RouteTable0AB21A14"
    }
   },
   "DependsOn": [
    "EKSVpcVPCGW60CB8A7B"
   ],
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "EKSVpcPublicSubnet2EIPBD601F30": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet2/EIP"
   }
  },
  "EKSVpcPublicSubnet2NATGateway06A389FD": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "EKSVpcPublicSubnet2EIPBD601F30",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "EKSVpcPublicSubnet2Subnet22F974C4"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "EKSVpcPublicSubnet2DefaultRoute6E6CA646",
    "EKSVpcPublicSubnet2RouteTableAssociation56EB44CD"
   ],
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet2/NATGateway"
   }
  },
  "EKSVpcPublicSubnet3Subnet56B42EFD": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet3/Subnet"
   }
  },
  "EKSVpcPublicSubnet3RouteTable189BFA37": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet3/RouteTable"
   }
  },
  "EKSVpcPublicSubnet3RouteTableAssociation51CAF8FD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EKSVpcPublicSubnet3RouteTable189BFA37"
    },
    "SubnetId": {
     "Ref": "EKSVpcPublicSubnet3Subnet56B42EFD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet3/RouteTableAssociation"
   }
  },
  "EKSVpcPublicSubnet3DefaultRouteD0819E83": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EKSVpcIGW6C6D33F8"
    },
    "RouteTableId": {
     "Ref": "EKSVpcPublicSubnet3RouteTable189BFA37"
    }
   },
   "DependsOn": [
    "EKSVpcVPCGW60CB8A7B"
   ],
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet3/DefaultRoute"
   }
  },
  "EKSVpcPublicSubnet3EIPB55DF9D8": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet3/EIP"
   }
  },
  "EKSVpcPublicSubnet3NATGateway2BCBC784": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "EKSVpcPublicSubnet3EIPB55DF9D8",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "EKSVpcPublicSubnet3Subnet56B42EFD"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PublicSubnet3"
     }
    ]
   },
   "DependsOn": [
    "EKSVpcPublicSubnet3DefaultRouteD0819E83",
    "EKSVpcPublicSubnet3RouteTableAssociation51CAF8FD"
   ],
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PublicSubnet3/NATGateway"
   }
  },
  "EKSVpcPrivateSubnet1SubnetD09A7726": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PrivateSubnet1/Subnet"
   }
  },
  "EKSVpcPrivateSubnet1RouteTable158AD21B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PrivateSubnet1/RouteTable"
   }
  },
  "EKSVpcPrivateSubnet1RouteTableAssociation05ED387B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EKSVpcPrivateSubnet1RouteTable158AD21B"
    },
    "SubnetId": {
     "Ref": "EKSVpcPrivateSubnet1SubnetD09A7726"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "EKSVpcPrivateSubnet1DefaultRoute3FD0ADF2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EKSVpcPublicSubnet1NATGatewayE8A16310"
    },
    "RouteTableId": {
     "Ref": "EKSVpcPrivateSubnet1RouteTable158AD21B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "EKSVpcPrivateSubnet2Subnet75FE259E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PrivateSubnet2/Subnet"
   }
  },
  "EKSVpcPrivateSubnet2RouteTable584CB1D6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PrivateSubnet2/RouteTable"
   }
  },
  "EKSVpcPrivateSubnet2RouteTableAssociation56D711FD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EKSVpcPrivateSubnet2RouteTable584CB1D6"
    },
    "SubnetId": {
     "Ref": "EKSVpcPrivateSubnet2Subnet75FE259E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "EKSVpcPrivateSubnet2DefaultRoute6DA3F959": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EKSVpcPublicSubnet2NATGateway06A389FD"
    },
    "RouteTableId": {
     "Ref": "EKSVpcPrivateSubnet2RouteTable584CB1D6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "EKSVpcPrivateSubnet3Subnet5CF05D30": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PrivateSubnet3/Subnet"
   }
  },
  "EKSVpcPrivateSubnet3RouteTable8E66A31D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PrivateSubnet3/RouteTable"
   }
  },
  "EKSVpcPrivateSubnet3RouteTableAssociationA3F123E9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EKSVpcPrivateSubnet3RouteTable8E66A31D"
    },
    "SubnetId": {
     "Ref": "EKSVpcPrivateSubnet3Subnet5CF05D30"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "EKSVpcPrivateSubnet3DefaultRouteF170F65E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EKSVpcPublicSubnet3NATGateway2BCBC784"
    },
    "RouteTableId": {
     "Ref": "EKSVpcPrivateSubnet3RouteTable8E66A31D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/PrivateSubnet3/DefaultRoute"
   }
  },
  "EKSVpcIGW6C6D33F8": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyEKSCluster/EKSVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/IGW"
   }
  },
  "EKSVpcVPCGW60CB8A7B": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "EKSVpcIGW6C6D33F8"
    },
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/EKSVpc/VPCGW"
   }
  },
  "kubectl290BBFC9": {
   "Type": "AWS::Lambda::LayerVersion",
   "Properties": {
    "Content": {
     "S3Bucket": "cdk-hnb659fds-assets-535002886351-us-east-1",
     "S3Key": "a5110b475e7a506b8a1282cdfb3c2f7ae59bcf00ba96273a702339b8819dd17f.zip"
    },
    "Description": "/opt/kubectl/kubectl 1.31.0; /opt/helm/helm 3.17.1",
    "LicenseInfo": "Apache-2.0"
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/kubectl/Resource",
    "aws:asset:path": "asset.a5110b475e7a506b8a1282cdfb3c2f7ae59bcf00ba96273a702339b8819dd17f.zip",
    "aws:asset:is-bundled": false,
    "aws:asset:property": "Content"
   }
  },
  "FargateClusterKubectlHandlerRole93DCDA21": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
       ]
      ]
     },
     {
      "Fn::If": [
       "FargateClusterHasEcrPublic3641FEA6",
       {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":iam::aws:policy/AmazonElasticContainerRegistryPublicReadOnly"
         ]
        ]
       },
       {
        "Ref": "AWS::NoValue"
       }
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/FargateCluster/KubectlHandlerRole/Resource"
   }
  },
  "FargateClusterKubectlHandlerRoleDefaultPolicy3F5DBBB0": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "eks:DescribeCluster",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FargateCluster019F03E8",
         "Arn"
        ]
       }
      },
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FargateClusterCreationRole8C524AD8",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FargateClusterKubectlHandlerRoleDefaultPolicy3F5DBBB0",
    "Roles": [
     {
      "Ref": "FargateClusterKubectlHandlerRole93DCDA21"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/FargateCluster/KubectlHandlerRole/DefaultPolicy/Resource"
   }
  },
  "FargateClusterRole8E36B33A": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "eks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSClusterPolicy"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/FargateCluster/Role/Resource"
   }
  },
  "FargateClusterControlPlaneSecurityGroup1021A150": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "EKS Control Plane Security Group",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "EKSVpcBAB3E5CC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/FargateCluster/ControlPlaneSecurityGroup/Resource"
   }
  },
  "FargateClusterCreationRole8C524AD8": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::GetAtt": [
          "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
          "Outputs.MyEKSClusterawscdkawseksClusterResourceProviderOnEventHandlerServiceRole0F8CC073Arn"
         ]
        }
       }
      },
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::GetAtt": [
          "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
          "Outputs.MyEKSClusterawscdkawseksClusterResourceProviderIsCompleteHandlerServiceRoleA20574CFArn"
         ]
        }
       }
      },
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::GetAtt": [
          "FargateClusterKubectlHandlerRole93DCDA21",
          "Arn"
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "DependsOn": [
    "EKSVpcIGW6C6D33F8",
    "EKSVpcPrivateSubnet1DefaultRoute3FD0ADF2",
    "EKSVpcPrivateSubnet1RouteTable158AD21B",
    "EKSVpcPrivateSubnet1RouteTableAssociation05ED387B",
    "EKSVpcPrivateSubnet1SubnetD09A7726",
    "EKSVpcPrivateSubnet2DefaultRoute6DA3F959",
    "EKSVpcPrivateSubnet2RouteTable584CB1D6",
    "EKSVpcPrivateSubnet2RouteTableAssociation56D711FD",
    "EKSVpcPrivateSubnet2Subnet75FE259E",
    "EKSVpcPrivateSubnet3DefaultRouteF170F65E",
    "EKSVpcPrivateSubnet3RouteTable8E66A31D",
    "EKSVpcPrivateSubnet3RouteTableAssociationA3F123E9",
    "EKSVpcPrivateSubnet3Subnet5CF05D30",
    "EKSVpcPublicSubnet1DefaultRouteF13B673C",
    "EKSVpcPublicSubnet1EIPA7436DE4",
    "EKSVpcPublicSubnet1NATGatewayE8A16310",
    "EKSVpcPublicSubnet1RouteTable258B7E17",
    "EKSVpcPublicSubnet1RouteTableAssociationC3AB9ADD",
    "EKSVpcPublicSubnet1Subnet6F739FCA",
    "EKSVpcPublicSubnet2DefaultRoute6E6CA646",
    "EKSVpcPublicSubnet2EIPBD601F30",
    "EKSVpcPublicSubnet2NATGateway06A389FD",
    "EKSVpcPublicSubnet2RouteTable0AB21A14",
    "EKSVpcPublicSubnet2RouteTableAssociation56EB44CD",
    "EKSVpcPublicSubnet2Subnet22F974C4",
    "EKSVpcPublicSubnet3DefaultRouteD0819E83",
    "EKSVpcPublicSubnet3EIPB55DF9D8",
    "EKSVpcPublicSubnet3NATGateway2BCBC784",
    "EKSVpcPublicSubnet3RouteTable189BFA37",
    "EKSVpcPublicSubnet3RouteTableAssociation51CAF8FD",
    "EKSVpcPublicSubnet3Subnet56B42EFD",
    "EKSVpcBAB3E5CC",
    "EKSVpcVPCGW60CB8A7B"
   ],
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/FargateCluster/Resource/CreationRole/Resource"
   }
  },
  "FargateClusterCreationRoleDefaultPolicy629049D0": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FargateClusterRole8E36B33A",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "eks:CreateCluster",
        "eks:DescribeCluster",
        "eks:DescribeUpdate",
        "eks:DeleteCluster",
        "eks:UpdateClusterVersion",
        "eks:UpdateClusterConfig",
        "eks:CreateFargateProfile",
        "eks:TagResource",
        "eks:UntagResource"
       ],
       "Effect": "Allow",
       "Resource": [
        "*"
       ]
      },
      {
       "Action": [
        "eks:DescribeFargateProfile",
        "eks:DeleteFargateProfile"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "iam:GetRole",
        "iam:listAttachedRolePolicies"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": "iam:CreateServiceLinkedRole",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "ec2:DescribeInstances",
        "ec2:DescribeNetworkInterfaces",
        "ec2:DescribeSecurityGroups",
        "ec2:DescribeSubnets",
        "ec2:DescribeRouteTables",
        "ec2:DescribeDhcpOptions",
        "ec2:DescribeVpcs"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
         "Arn"
        ]
       }
      },
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "myProfilePodExecutionRole72BDC87A",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FargateClusterCreationRoleDefaultPolicy629049D0",
    "Roles": [
     {
      "Ref": "FargateClusterCreationRole8C524AD8"
     }
    ]
   },
   "DependsOn": [
    "EKSVpcIGW6C6D33F8",
    "EKSVpcPrivateSubnet1DefaultRoute3FD0ADF2",
    "EKSVpcPrivateSubnet1RouteTable158AD21B",
    "EKSVpcPrivateSubnet1RouteTableAssociation05ED387B",
    "EKSVpcPrivateSubnet1SubnetD09A7726",
    "EKSVpcPrivateSubnet2DefaultRoute6DA3F959",
    "EKSVpcPrivateSubnet2RouteTable584CB1D6",
    "EKSVpcPrivateSubnet2RouteTableAssociation56D711FD",
    "EKSVpcPrivateSubnet2Subnet75FE259E",
    "EKSVpcPrivateSubnet3DefaultRouteF170F65E",
    "EKSVpcPrivateSubnet3RouteTable8E66A31D",
    "EKSVpcPrivateSubnet3RouteTableAssociationA3F123E9",
    "EKSVpcPrivateSubnet3Subnet5CF05D30",
    "EKSVpcPublicSubnet1DefaultRouteF13B673C",
    "EKSVpcPublicSubnet1EIPA7436DE4",
    "EKSVpcPublicSubnet1NATGatewayE8A16310",
    "EKSVpcPublicSubnet1RouteTable258B7E17",
    "EKSVpcPublicSubnet1RouteTableAssociationC3AB9ADD",
    "EKSVpcPublicSubnet1Subnet6F739FCA",
    "EKSVpcPublicSubnet2DefaultRoute6E6CA646",
    "EKSVpcPublicSubnet2EIPBD601F30",
    "EKSVpcPublicSubnet2NATGateway06A389FD",
    "EKSVpcPublicSubnet2RouteTable0AB21A14",
    "EKSVpcPublicSubnet2RouteTableAssociation56EB44CD",
    "EKSVpcPublicSubnet2Subnet22F974C4",
    "EKSVpcPublicSubnet3DefaultRouteD0819E83",
    "EKSVpcPublicSubnet3EIPB55DF9D8",
    "EKSVpcPublicSubnet3NATGateway2BCBC784",
    "EKSVpcPublicSubnet3RouteTable189BFA37",
    "EKSVpcPublicSubnet3RouteTableAssociation51CAF8FD",
    "EKSVpcPublicSubnet3Subnet56B42EFD",
    "EKSVpcBAB3E5CC",
    "EKSVpcVPCGW60CB8A7B"
   ],
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/FargateCluster/Resource/CreationRole/DefaultPolicy/Resource"
   }
  },
  "FargateCluster019F03E8": {
   "Type": "Custom::AWSCDK-EKS-Cluster",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
      "Outputs.MyEKSClusterawscdkawseksClusterResourceProviderframeworkonEventB3DDA680Arn"
     ]
    },
    "Config": {
     "version": "1.31",
     "roleArn": {
      "Fn::GetAtt": [
       "FargateClusterRole8E36B33A",
       "Arn"
      ]
     },
     "kubernetesNetworkConfig": {
      "ipFamily": "ipv4"
     },
     "resourcesVpcConfig": {
      "subnetIds": [
       {
        "Ref": "EKSVpcPublicSubnet1Subnet6F739FCA"
       },
       {
        "Ref": "EKSVpcPublicSubnet2Subnet22F974C4"
       },
       {
        "Ref": "EKSVpcPublicSubnet3Subnet56B42EFD"
       },
       {
        "Ref": "EKSVpcPrivateSubnet1SubnetD09A7726"
       },
       {
        "Ref": "EKSVpcPrivateSubnet2Subnet75FE259E"
       },
       {
        "Ref": "EKSVpcPrivateSubnet3Subnet5CF05D30"
       }
      ],
      "securityGroupIds": [
       {
        "Fn::GetAtt": [
         "FargateClusterControlPlaneSecurityGroup1021A150",
         "GroupId"
        ]
       }
      ],
      "endpointPublicAccess": true,
      "endpointPrivateAccess": true
     },
     "logging": {
      "clusterLogging": [
       {
        "enabled": true,
        "types": [
         "api",
         "authenticator",
         "scheduler",
         "audit",
         "controllerManager"
        ]
       }
      ]
     },
     "accessConfig": {}
    },
    "AssumeRoleArn": {
     "Fn::GetAtt": [
      "FargateClusterCreationRole8C524AD8",
      "Arn"
     ]
    },
    "AttributesRevision": 4
   },
   "DependsOn": [
    "EKSVpcIGW6C6D33F8",
    "EKSVpcPrivateSubnet1DefaultRoute3FD0ADF2",
    "EKSVpcPrivateSubnet1RouteTable158AD21B",
    "EKSVpcPrivateSubnet1RouteTableAssociation05ED387B",
    "EKSVpcPrivateSubnet1SubnetD09A7726",
    "EKSVpcPrivateSubnet2DefaultRoute6DA3F959",
    "EKSVpcPrivateSubnet2RouteTable584CB1D6",
    "EKSVpcPrivateSubnet2RouteTableAssociation56D711FD",
    "EKSVpcPrivateSubnet2Subnet75FE259E",
    "EKSVpcPrivateSubnet3DefaultRouteF170F65E",
    "EKSVpcPrivateSubnet3RouteTable8E66A31D",
    "EKSVpcPrivateSubnet3RouteTableAssociationA3F123E9",
    "EKSVpcPrivateSubnet3Subnet5CF05D30",
    "EKSVpcPublicSubnet1DefaultRouteF13B673C",
    "EKSVpcPublicSubnet1EIPA7436DE4",
    "EKSVpcPublicSubnet1NATGatewayE8A16310",
    "EKSVpcPublicSubnet1RouteTable258B7E17",
    "EKSVpcPublicSubnet1RouteTableAssociationC3AB9ADD",
    "EKSVpcPublicSubnet1Subnet6F739FCA",
    "EKSVpcPublicSubnet2DefaultRoute6E6CA646",
    "EKSVpcPublicSubnet2EIPBD601F30",
    "EKSVpcPublicSubnet2NATGateway06A389FD",
    "EKSVpcPublicSubnet2RouteTable0AB21A14",
    "EKSVpcPublicSubnet2RouteTableAssociation56EB44CD",
    "EKSVpcPublicSubnet2Subnet22F974C4",
    "EKSVpcPublicSubnet3DefaultRouteD0819E83",
    "EKSVpcPublicSubnet3EIPB55DF9D8",
    "EKSVpcPublicSubnet3NATGateway2BCBC784",
    "EKSVpcPublicSubnet3RouteTable189BFA37",
    "EKSVpcPublicSubnet3RouteTableAssociation51CAF8FD",
    "EKSVpcPublicSubnet3Subnet56B42EFD",
    "EKSVpcBAB3E5CC",
    "EKSVpcVPCGW60CB8A7B",
    "FargateClusterCreationRoleDefaultPolicy629049D0",
    "FargateClusterCreationRole8C524AD8"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/FargateCluster/Resource/Resource/Default"
   }
  },
  "FargateClusterKubectlReadyBarrier93746934": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Type": "String",
    "Value": "aws:cdk:eks:kubectl-ready"
   },
   "DependsOn": [
    "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
    "FargateClusterfargateprofiledefault10E54561",
    "FargateClusterCreationRoleDefaultPolicy629049D0",
    "FargateClusterCreationRole8C524AD8",
    "FargateCluster019F03E8",
    "myProfilePodExecutionRole72BDC87A",
    "myProfileFFF38DC2"
   ],
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/FargateCluster/KubectlReadyBarrier"
   }
  },
  "FargateClusterCoreDnsComputeTypePatch711BF1B2": {
   "Type": "Custom::AWSCDK-EKS-KubernetesPatch",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
      "Outputs.MyEKSClusterawscdkawseksKubectlProviderframeworkonEvent070BFADCArn"
     ]
    },
    "ResourceName": "deployment/coredns",
    "ResourceNamespace": "kube-system",
    "ApplyPatchJson": "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"eks.amazonaws.com/compute-type\":\"fargate\"}}}}}",
    "RestorePatchJson": "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"eks.amazonaws.com/compute-type\":\"ec2\"}}}}}",
    "ClusterName": {
     "Ref": "FargateCluster019F03E8"
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "FargateClusterCreationRole8C524AD8",
      "Arn"
     ]
    },
    "PatchType": "strategic"
   },
   "DependsOn": [
    "FargateClusterKubectlReadyBarrier93746934"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/FargateCluster/CoreDnsComputeTypePatch/Resource/Default"
   }
  },
  "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "eks-fargate-pods.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSFargatePodExecutionRolePolicy"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/FargateCluster/fargate-profile-default/PodExecutionRole/Resource"
   }
  },
  "FargateClusterfargateprofiledefault10E54561": {
   "Type": "Custom::AWSCDK-EKS-FargateProfile",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
      "Outputs.MyEKSClusterawscdkawseksClusterResourceProviderframeworkonEventB3DDA680Arn"
     ]
    },
    "AssumeRoleArn": {
     "Fn::GetAtt": [
      "FargateClusterCreationRole8C524AD8",
      "Arn"
     ]
    },
    "Config": {
     "clusterName": {
      "Ref": "FargateCluster019F03E8"
     },
     "podExecutionRoleArn": {
      "Fn::GetAtt": [
       "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
       "Arn"
      ]
     },
     "selectors": [
      {
       "namespace": "default"
      },
      {
       "namespace": "kube-system"
      }
     ]
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/FargateCluster/fargate-profile-default/Resource/Default"
   }
  },
  "FargateClusterAwsAuthmanifest1F7A5553": {
   "Type": "Custom::AWSCDK-EKS-KubernetesResource",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
      "Outputs.MyEKSClusterawscdkawseksKubectlProviderframeworkonEvent070BFADCArn"
     ]
    },
    "Manifest": {
     "Fn::Join": [
      "",
      [
       "[{\"apiVersion\":\"v1\",\"kind\":\"ConfigMap\",\"metadata\":{\"name\":\"aws-auth\",\"namespace\":\"kube-system\",\"labels\":{\"aws.cdk.eks/prune-c86ca33b4344ab74214e60d392184000a60b8a25b7\":\"\"}},\"data\":{\"mapRoles\":\"[{\\\"rolearn\\\":\\\"",
       {
        "Fn::GetAtt": [
         "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
         "Arn"
        ]
       },
       "\\\",\\\"username\\\":\\\"system:node:{{SessionName}}\\\",\\\"groups\\\":[\\\"system:bootstrappers\\\",\\\"system:nodes\\\",\\\"system:node-proxier\\\"]},{\\\"rolearn\\\":\\\"",
       {
        "Fn::GetAtt": [
         "myProfilePodExecutionRole72BDC87A",
         "Arn"
        ]
       },
       "\\\",\\\"username\\\":\\\"system:node:{{SessionName}}\\\",\\\"groups\\\":[\\\"system:bootstrappers\\\",\\\"system:nodes\\\",\\\"system:node-proxier\\\"]}]\",\"mapUsers\":\"[]\",\"mapAccounts\":\"[]\"}}]"
      ]
     ]
    },
    "ClusterName": {
     "Ref": "FargateCluster019F03E8"
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "FargateClusterCreationRole8C524AD8",
      "Arn"
     ]
    },
    "PruneLabel": "aws.cdk.eks/prune-c86ca33b4344ab74214e60d392184000a60b8a25b7",
    "Overwrite": true
   },
   "DependsOn": [
    "FargateClusterKubectlReadyBarrier93746934"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/FargateCluster/AwsAuth/manifest/Resource/Default"
   }
  },
  "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.us-east-1.",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/cdk-hnb659fds-assets-535002886351-us-east-1/77ae402000cd171ddeb0bc479a4cbfda159e495b8923dad209564d31eb436968.json"
      ]
     ]
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/@aws-cdk--aws-eks.ClusterResourceProvider.NestedStack/@aws-cdk--aws-eks.ClusterResourceProvider.NestedStackResource",
    "aws:asset:path": "MyEKSClusterawscdkawseksClusterResourceProvider7494A2FD.nested.template.json",
    "aws:asset:property": "TemplateURL"
   }
  },
  "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "Parameters": {
     "referencetoMyEKSClusterkubectl1D41AFA1Ref": {
      "Ref": "kubectl290BBFC9"
     },
     "referencetoMyEKSClusterFargateClusterKubectlHandlerRoleC861649EArn": {
      "Fn::GetAtt": [
       "FargateClusterKubectlHandlerRole93DCDA21",
       "Arn"
      ]
     },
     "referencetoMyEKSClusterEKSVpcPrivateSubnet1Subnet52504ADFRef": {
      "Ref": "EKSVpcPrivateSubnet1SubnetD09A7726"
     },
     "referencetoMyEKSClusterEKSVpcPrivateSubnet2Subnet500D329DRef": {
      "Ref": "EKSVpcPrivateSubnet2Subnet75FE259E"
     },
     "referencetoMyEKSClusterEKSVpcPrivateSubnet3SubnetE081A83ARef": {
      "Ref": "EKSVpcPrivateSubnet3Subnet5CF05D30"
     },
     "referencetoMyEKSClusterFargateClusterFB50077FClusterSecurityGroupId": {
      "Fn::GetAtt": [
       "FargateCluster019F03E8",
       "ClusterSecurityGroupId"
      ]
     }
    },
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.us-east-1.",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/cdk-hnb659fds-assets-535002886351-us-east-1/bff69e70e1d5341f1f8926f72165e3662f48b35271d32415b958ce6f38bcb32b.json"
      ]
     ]
    }
   },
   "DependsOn": [
    "EKSVpcPrivateSubnet1DefaultRoute3FD0ADF2",
    "EKSVpcPrivateSubnet1RouteTableAssociation05ED387B",
    "EKSVpcPrivateSubnet2DefaultRoute6DA3F959",
    "EKSVpcPrivateSubnet2RouteTableAssociation56D711FD",
    "EKSVpcPrivateSubnet3DefaultRouteF170F65E",
    "EKSVpcPrivateSubnet3RouteTableAssociationA3F123E9",
    "FargateClusterKubectlHandlerRoleDefaultPolicy3F5DBBB0",
    "FargateClusterKubectlHandlerRole93DCDA21"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/@aws-cdk--aws-eks.KubectlProvider.NestedStack/@aws-cdk--aws-eks.KubectlProvider.NestedStackResource",
    "aws:asset:path": "MyEKSClusterawscdkawseksKubectlProvider6C070B46.nested.template.json",
    "aws:asset:property": "TemplateURL"
   }
  },
  "myProfilePodExecutionRole72BDC87A": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "eks-fargate-pods.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSFargatePodExecutionRolePolicy"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/myProfile/PodExecutionRole/Resource"
   }
  },
  "myProfileFFF38DC2": {
   "Type": "Custom::AWSCDK-EKS-FargateProfile",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
      "Outputs.MyEKSClusterawscdkawseksClusterResourceProviderframeworkonEventB3DDA680Arn"
     ]
    },
    "AssumeRoleArn": {
     "Fn::GetAtt": [
      "FargateClusterCreationRole8C524AD8",
      "Arn"
     ]
    },
    "Config": {
     "clusterName": {
      "Ref": "FargateCluster019F03E8"
     },
     "podExecutionRoleArn": {
      "Fn::GetAtt": [
       "myProfilePodExecutionRole72BDC87A",
       "Arn"
      ]
     },
     "selectors": [
      {
       "namespace": "default"
      }
     ]
    }
   },
   "DependsOn": [
    "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
    "FargateClusterfargateprofiledefault10E54561"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/myProfile/Resource/Default"
   }
  },
  "addonKubeProxy": {
   "Type": "AWS::EKS::Addon",
   "Properties": {
    "AddonName": "kube-proxy",
    "ClusterName": {
     "Ref": "FargateCluster019F03E8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/addonKubeProxy"
   }
  },
  "addonCoreDns": {
   "Type": "AWS::EKS::Addon",
   "Properties": {
    "AddonName": "coredns",
    "ClusterName": {
     "Ref": "FargateCluster019F03E8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/addonCoreDns"
   }
  },
  "addonVpcCni": {
   "Type": "AWS::EKS::Addon",
   "Properties": {
    "AddonName": "vpc-cni",
    "ClusterName": {
     "Ref": "FargateCluster019F03E8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/addonVpcCni"
   }
  },
  "addonEksPodIdentityAgent": {
   "Type": "AWS::EKS::Addon",
   "Properties": {
    "AddonName": "eks-pod-identity-agent",
    "ClusterName": {
     "Ref": "FargateCluster019F03E8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/addonEksPodIdentityAgent"
   }
  },
  "addonMetricsServer": {
   "Type": "AWS::EKS::Addon",
   "Properties": {
    "AddonName": "metrics-server",
    "ClusterName": {
     "Ref": "FargateCluster019F03E8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/addonMetricsServer"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/01RXU/DMAz8LXt3A12F4JFSwYT4ULWhvSI39bbQNEGxs2mq+t9R27Ht6S5nx7qz56pLH+7U7QwPnOi6SaypVLcS1A3ggb870nPVrX81FBu3LgsoY2WNXsXKkQzahS19FPrCytJFv2g5s9cGxXh3bh7I82s5wCfKAoUOeIQymD0KXQa/OqHg6NwwOTm9chHUu5acwIp0DEaOi+Dj7+jhWuiBs29kJmGVDwCcqaeoG5InZAKLbVWjKjbuHY8U1hR48EoNq+4FwxaFChtZKMBbrEZDxCWK3sGpXAa/MZYgP3AeZXfV9oHObIjHNHlde9eDwVZ1Sz8ta8TSW6PHdBPre1gS+xg0wWh4Jbg1bgtFZPHtuTb8v+KFd7X5X/N4yB5uVTZ7PF34Zgqa2CFl0sSKtNhkn6XqbeLrLB030IPzNakfvtnPU3Wv0tkPG5OE6MS0pJYT/gGdH [...]
   },
   "Metadata": {
    "aws:cdk:path": "MyEKSCluster/CDKMetadata/Default"
   }
  }
 },
 "Conditions": {
  "FargateClusterHasEcrPublic3641FEA6": {
   "Fn::Equals": [
    {
     "Ref": "AWS::Partition"
    },
    "aws"
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
